package origa.hotely;

import lombok.Getter;

@Getter

public class EfitraAntonony extends Efitra{
    public EfitraAntonony(boolean misyKlima) {
        super(misyKlima);
    }
}
