package origa.hotely;

import lombok.Getter;

@Getter
public class EfitraAvolenta extends Efitra{
    public EfitraAvolenta(boolean misyKlima, boolean mahitaRanomasina) {
        super(misyKlima, mahitaRanomasina);
    }
}
